Kepek copy if newer

--- a/Kavek/Kavek/Kavek.csproj
+++ b/Kavek/Kavek/Kavek.csproj
@@ -92,8 +92,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="bin\Debug\kavebab.jpg" />
-    <None Include="bin\Debug\kaveikon.png" />
+    <None Include="bin\Debug\kavebab.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="bin\Debug\kaveikon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="kavekexp.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
