--- a/Kavek/Kavek/Kavek.csproj
+++ b/Kavek/Kavek/Kavek.csproj
@@ -53,6 +53,9 @@
       <DependentUpon>alapForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\adoTipus.cs" />
+    <Compile Include="Entities\homeButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Entities\kaveClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
